Adding structured_config and raw_eos_cli

--- a/ansible_collections/arista/avd/molecule/eos_designs-twodc-5stage-clos/intended/configs/DC2-POD1-L2LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs-twodc-5stage-clos/intended/configs/DC2-POD1-L2LEAF1A.cfg
@@ -75,4 +75,11 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+interface Loopback1011
+  description Loopback created from raw_eos_cli under l2leaf defaults in DC2 POD1
+
+interface Loopback1000
+  description Loopback created from raw_eos_cli under VRF Common_VRF
+
+!
 end
